--- a/index.html
+++ b/index.html
@@ -133,14 +133,15 @@
         <p class="hint">
           Las gráficas se actualizan con los filtros de la tabla de colonias.
         </p>
-        <div class="chart-card">
-          <h4>Colonias por prioridad</h4>
-          <canvas id="chartColonias"></canvas>
-        </div>
-        <div class="chart-card">
-          <h4>Población por prioridad</h4>
-          <canvas id="chartPoblacion"></canvas>
-        </div>
+       <div class="chart-card">
+  <h4 id="chartTitleColonias">Colonias por prioridad – Ciudad completa</h4>
+  <canvas id="chartColonias"></canvas>
+</div>
+<div class="chart-card">
+  <h4 id="chartTitlePoblacion">Población por prioridad – Ciudad completa</h4>
+  <canvas id="chartPoblacion"></canvas>
+</div>
+
       </div>
     </div>
   </section>
